# FastAPI_Avancao

./: LICENSE  README.md
Pratica/: Pydantic.py  async_await_overwiew.py  async_await_sponge_bob.py  async_await_sponge_bob_otimizado.py  sync_overwiew.py  sync_sponge_bob.py
Project001/: .env  converter_sync.py  main.py  pyproject.toml  routers.py
Project002/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Project002/app/db/: models.py
Project002/app/migrations/: env.py
Secao2/: app.py  pyproject.toml
