[tool.poetry]
name = "fastapi-avançado"
version = "0.1.0"
description = ""
authors = ["Alexandre de Jesus <alexandre.miranda@grupoicts.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
